# python-project

./: .doit.db  .gitignore  README.md  babel.cfg  dodo.py  pyproject.toml  requirements.txt
docs/source/: api.rst  conf.py  index.rst
fileoptimizer/: archive_service.py  exceptions.py  image_optimizer.py  models.py  storage.py  utils.py
tests/: test_archive_service.py  test_image_optimizer.py  test_web.py
web/: config.py  web.py
web/locales/: messages.pot
web/locales/en/LC_MESSAGES/: messages.po
web/locales/ru/LC_MESSAGES/: messages.po
web/static/: script.js  style.css
web/templates/: archive_form.html  base.html  error.html  image_form.html  index.html  result.html
