[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileoptimizer"
version = "0.1.0"
description = "Веб-приложение для оптимизации изображений и создания архивов"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "Pillow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "Babel>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pydocstyle>=6.3.0",
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=1.24",
    "doit>=0.36.0",
    "build",
    "twine",
    "httpx",
]

[project.scripts]
fileoptimizer-web = "web.web:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fileoptimizer*", "web*"]

[tool.setuptools.package-data]
fileoptimizer = ["py.typed"]
web = [
    "templates/*.html",
    "static/*.css",
    "static/*.js",
    "locales/**/*.mo",
]


[tool.ruff]
line-length = 120
target-version = "py39"
select = [
    "E", "W", "F", "I", "D",
]
ignore = [
    "D100", "D104", "D107",
]
exclude = [
    ".git", "__pycache__", "build", "dist", "venv", ".venv", "docs/_build",
]

[tool.pydocstyle]
convention = "google"
add-ignore = ["D104", "D107"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=fileoptimizer --cov=web --cov-report=term-missing --cov-fail-under=75"

[tool.coverage.run]
source = ["fileoptimizer", "web"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]