[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileoptimizer"
version = "0.1.0"
description = "Веб-приложение для оптимизации изображений и создания архивов"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "Babel>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "pydocstyle>=6.3.0",
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=1.24",
    "doit>=0.36.0",
    "build",
    "httpx2",
]

[project.scripts]
fileoptimizer-web = "web.web:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fileoptimizer*", "web*"]

[tool.setuptools.package-data]
web = [
    "templates/*.html",
    "static/**/*",
    "locales/*/LC_MESSAGES/*.mo",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
    "docs/_build",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "D"]
ignore = [
    "D100",
    "D104",
    "D107",
    "D203",
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
